deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-rest-api
  labels:
    app: java-rest-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-rest-api
  template:
    metadata:
      labels:
        app: java-rest-api
    spec:
      containers:
      - name: java-rest-api
        image: hatta1212/restjavaapi:withapplicationyml-02 # Replace with your image
        ports:
        - containerPort: 8080
        livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
        readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
        startupProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/health
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
