service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-rest-jreyml
  labels:
    app: java-rest-jreyml
spec:
  selector:
    app: java-rest-jreyml
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
