ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-java-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test-java.devops-idn.my.id  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-rest-api
                port:
                  number: 80
